# cmake-notes

./: Notes.txt  README.md
ControlFlowFunctionsMacrosScopes/: CMakeLists.txt
GeneratingFirstLibrary/: Addition.cpp  Addition.h  CMakeLists.txt  Division.cpp  Print.cpp
ManagingHeaderFiles/: CMakeLists.txt  main.cpp
ManagingHeaderFiles/my_math_dir/: CMakeLists.txt
ManagingHeaderFiles/my_math_dir/include/my_math/: Addition.h  Division.h
ManagingHeaderFiles/my_math_dir/src/: Addition.cpp  Division.cpp
ManagingHeaderFiles/my_print_dir/: CMakeLists.txt
ManagingHeaderFiles/my_print_dir/include/: Print.h
ManagingHeaderFiles/my_print_dir/src/: Print.cpp
SubModules/: Division.h  Print.h  main.cpp
SubModules/my_math_dir/: Addition.cpp  CMakeLists.txt  Division.cpp
SubModules/my_print_dir/: CMakeLists.txt  Print.cpp
VariablesListsStrings/: CMakeLists.txt
